<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.manuel.todoapp.activity.EditTodoActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:padding="10dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_title"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_title_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_description"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_description_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_date"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_date_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="date" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_priority"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/add_todo_priority_sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_category"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/add_todo_category_sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="2" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dip" >

        <Button
            android:id="@+id/add_todo_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/add_todo_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/ok_btn" />
    </LinearLayout>

</LinearLayout>