<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.manuel.todoapp.AddTodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/add_todo_heading"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:padding="10dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_title"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_title_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_description"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_description_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_date"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_todo_date_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="1"
                android:inputType="datetime" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_category"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/add_todo_category_sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/add_todo_priority"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/add_todo_priority_sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dip"
                android:layout_weight="2" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dip" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/add_cancel_btn" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/add_ok_btn" />
    </LinearLayout>

</LinearLayout>